# calculator

./: app.py  briefcase.toml  pyproject.toml
.github/workflows/: android-release.yml  android.yml  generate-keystore.yml
src/calculator/: app.py
